#*******************************************************************************
# Makefile.am (m4)
#-------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	seq66
# \author     	Chris Ahlstrom
# \date       	2018-11-11
# \update      2022-01-04
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This module provides an Automake makefile for the seq66
#     library's main 'm4' directory.  This makefile provides mostly just a
#     way to make sure the m4 files are included in the 'dist' target.
#
#-------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign dist-zip dist-bzip2
MAINTAINERCLEANFILES = Makefile.in Makefile

PACKAGE = @PACKAGE@
VERSION = @VERSION@

#*******************************************************************************
# EXTRA_DIST
#-------------------------------------------------------------------------------

EXTRA_DIST = alsa.m4 \
 ax_cxx_compile_stdcxx.m4 \
 ax_cxx_compile_stdcxx_11.m4 \
 ax_have_qt.m4 \
 ax_have_qt_ex.m4 \
 ax_have_qt_min.m4 \
 ax_prefix_config_h.m4 \
 ax_prog_flex.m4 \
 ax_pthread.m4 \
 ax_require_defined.m4 \
 gcc-version.m4 \
 inttypes.m4 \
 isc-posix.m4 \
 libtool.m4 \
 ltoptions.m4 \
 ltsugar.m4 \
 ltversion.m4 \
 mm-common.m4 \
 mm-warnings.m4 \
 pkg.m4 \
 seq64_mingw_dll.m4 \
 threadlib.m4 \
 win32msc.m4 \
 xpc_debug.m4 \
 xpc_doxygen.m4 \
 xpc_errorlog.m4 \
 xpc_mingw.m4 \
 xpc_mingw.m4 \
 xpc_nullptr.m4 \
 xpc_thisptr.m4

#******************************************************************************
# Makefile.am (m4)
#------------------------------------------------------------------------------
# 	vim: ts=3 sw=3 ft=automake
#------------------------------------------------------------------------------
