#*****************************************************************************
# meson.build (seq66)
#-----------------------------------------------------------------------------
##
# \file        resources/meson.build
# \library     seq66
# \author      Chris Ahlstrom
# \date        2026-04-28
# \updates     2026-04-28
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" library. See the top-level meson.build
#  file for license information.
#
#  Moved to the parent directory.
#
#-----------------------------------------------------------------------------

subdir('pixmaps')

#****************************************************************************
# meson.build (resources)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
